--- a/BWYSDP/BWYSDP.csproj
+++ b/BWYSDP/BWYSDP.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="BLL\BllDataBase.cs" />
     <Compile Include="BLL\DataSourceInfoBLL.cs" />
+    <Compile Include="com\DSUtiles.cs" />
     <Compile Include="com\ExceptionManager.cs" />
     <Compile Include="com\LibItem.cs" />
     <Compile Include="com\LibTreeNode.cs" />
@@ -250,6 +251,24 @@
     <Compile Include="Controls\TBStructProperty.Designer.cs">
       <DependentUpon>TBStructProperty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\TransFieldProperty.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\TransFieldProperty.Designer.cs">
+      <DependentUpon>TransFieldProperty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\TransProperty.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\TransProperty.Designer.cs">
+      <DependentUpon>TransProperty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\TransSourceControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\TransSourceControl.Designer.cs">
+      <DependentUpon>TransSourceControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateFunc.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -392,6 +411,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\TBStructProperty.resx">
       <DependentUpon>TBStructProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\TransProperty.resx">
+      <DependentUpon>TransProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\TransSourceControl.resx">
+      <DependentUpon>TransSourceControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateFunc.resx">
       <DependentUpon>CreateFunc.cs</DependentUpon>
