--- a/BWYSDPWebDAL/ComDal/ComDal.csproj
+++ b/BWYSDPWebDAL/ComDal/ComDal.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ComDal.cs" />
     <Compile Include="MaterialsDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="reportTestDal.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SDPCRL.DAL.COM\SDPCRL.DAL.COM.csproj">
